# bridge-util-rs

./: .dockerignore  Cargo.toml  Dockerfile  compose.yaml  example_config.yaml
src/: handlers.rs  main.rs  model.rs  patterns.rs
