[package]
name = "bridge-util"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
regex = "1.11.0"
async-nats = { version = "0.37.0"}
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
serde_json = "1.0.128"
futures = "0.3.31"
once_cell = "1.20.2"
log = "0.4.22"
env_logger = "0.11.5"
serde_yaml = "0.9.33"
